--- a/public/client.html
+++ b/public/client.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sorteio Surpresa</title>
-
+    <!-- Estilos -->
     <link rel="stylesheet" href="public/assets/css/style.css" />
   </head>
 
   <body class="main">
-    <h1>Sorteio Surpresa</h1>
-    <form action="">
-      <input type="text" name="name" id="nameUser" placeholder="Digite seu nome">
-      <button type="submit" id="btn-form" >Entrar</button>
-    </form>
-    
+    <!-- Logo -->
+    <img
+        id="logo"
+        src="public/assets/images/logo-node.png"
+        alt="Código Fonte TV"
+    />
+
+    <!-- Mensagem -->
+    <div id="message" class="message"></div>
+
+    <!-- Scripts -->
     <script src="public/js/config.js"></script>
-    <!-- <script src="public/js/client.js"></script> -->
+    <script src="public/js/client.js"></script>
   </body>
 </html>
